logs/django-resumator.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/django_resumator-1.1.6.egg-info'...
Listing './lib/python3.5/site-packages/django_solo-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/resumator'...
Listing './lib/python3.5/site-packages/resumator/migrations'...
Listing './lib/python3.5/site-packages/resumator/static'...
Listing './lib/python3.5/site-packages/resumator/static/resumator'...
Listing './lib/python3.5/site-packages/resumator/static/resumator/css'...
Listing './lib/python3.5/site-packages/resumator/templates'...
Listing './lib/python3.5/site-packages/resumator/templates/admin'...
Listing './lib/python3.5/site-packages/resumator/templates/admin/solo'...
Listing './lib/python3.5/site-packages/resumator/templates/resumator'...
Listing './lib/python3.5/site-packages/resumator/templatetags'...
Compiling './lib/python3.5/site-packages/resumator/views.py'...
***   File "./lib/python3.5/site-packages/resumator/views.py", line 33
    print context_dict
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/solo'...
Listing './lib/python3.5/site-packages/solo/templates'...
Listing './lib/python3.5/site-packages/solo/templates/admin'...
Listing './lib/python3.5/site-packages/solo/templates/admin/solo'...
Listing './lib/python3.5/site-packages/solo/templatetags'...
Listing './lib/python3.5/site-packages/solo/tests'...
Listing './share'...
Listing './share/python-wheels'...
